<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.efficiclean.activities.StaffLogin"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <ProgressBar
        android:id="@+id/staffLoginProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/loading_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="Staff Login"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStaffLogin" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="25dp"/>

    <TextView
            android:text="Please enter your details."
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEnterDetails" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvStaffLogin" app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
        android:id="@+id/etStaffHotelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="Hotel ID"
        android:inputType="number"
        android:padding="10sp"
        android:text=""
        android:textColor="@color/myGold"
        android:textColorHint="#FFF"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterDetails" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Username"
            android:ems="10"
            android:id="@+id/etUsername" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etStaffHotelID" app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Password"
            android:ems="10"
            android:id="@+id/etPassword" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" app:layout_constraintHorizontal_bias="0.49"/>

    <Button
            android:text="Login"
            android:textSize="20sp"
            android:textColor="@color/myGold"
            android:background="@drawable/roundbutton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/btStaffLogin" android:layout_marginTop="82dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>
