<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.efficiclean.activities.GuestLogin"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <ProgressBar
            android:id="@+id/guestLoginProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/loading_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="Welcome to EfficiClean!"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>

    <TextView
            android:text="Please enter your details."
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEnterDetails" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Hotel ID"
            android:ems="10"
            android:id="@+id/etHotelID" android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterDetails" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Room Number"
            android:ems="10"
            android:id="@+id/etRoomNumber" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etHotelID" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Forename"
            android:ems="10"
            android:id="@+id/etForename" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etRoomNumber" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/myGold"
            android:textColorHint="#FFF"
            android:background="@color/colorPrimary"
            android:padding="10sp"
            android:hint="Surname"
            android:ems="10"
            android:id="@+id/etSurname" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etForename" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:text="Login"
            android:textSize="20sp"
            android:textColor="@color/myGold"
            android:background="@drawable/roundbutton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/btLogin" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/etSurname" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>
